Changes in optplus

Changes before 2012-5-26 not recorded 

TODOS


Changes

2012-8-03
   o    Change stop on npar<2 to warning if dowarn=TRUE.
   o    uobyqa is available by explicit method="uobyqa" but not
        as part of method="ALL"

2012-7-09
   o    Suppress warnings in ugHgenb -- too much
        unhelpful output
   o    Fixed optansout to print parameters

2012-6-07
   o    Merged optfntools into optplus to ensure 
        R-forge build.

2012-5-26
   o    Added check for "on a bound" in bmchk to aid
	in use of tanh() transformation as in nmkb().

